--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,14 +26,14 @@
       description: |
         Computer Science and Engineering
 
-- title: Honors and Awards
-  type: list
-  contents:
-    - UGC NET JRF Fellowship for Five Years of PhD
-    - Best Poster Award at ICDCN 2023
-    - Travel Grant Awards for attending conferences:
-      - ICDCS 2022
-      - ICDCN 2023
-      - IEEE NOMS 2024
-      - CODS COMAD 2024
-    - Qualified national level exams GATE, UGC NET with JRF
+    - title: Honors and Awards
+        type: list
+        contents:
+          - "UGC NET JRF Fellowship for Five Years of PhD"
+          - "Best Poster Award at ICDCN 2023"
+          - Travel Grant Awards:
+              - "ICDCS 2022"
+              - "ICDCN 2023"
+              - "IEEE NOMS 2024"
+              - "CODS COMAD 2024"
+          - "Qualified national level exams GATE, UGC NET with JRF"
