Complete website redesign: Automated Google Scholar sync, professional layout, and zero-maintenance updates
- Add GitHub Actions workflow for daily Google Scholar sync
- Create automated publication fetching and BibTeX generation
- Implement auto-generated news announcements from publications
- Redesign homepage with research focus and detailed bio
- Clean up all sample content (29 blog posts, sample pages)
- Update navigation for professional academic structure
- Add venue badges and colors (ICDCS, ICDCN, NOMS, etc.)
- Configure correct Google Scholar ID (wq36gfgAAAAJ)
- Create comprehensive documentation (SETUP.md, QUICK_START.md, etc.)
- Improve news announcements formatting
- Update repositories and venues data
- Add Python automation scripts with error handling
- Remove Einstein sample page and clean repositories
- Optimize site for academic presentation

This transforms the site into a self-updating academic portfolio that requires zero manual maintenance.

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,9 +1,20 @@
-"AJP":
-  url: https://aapt.scitation.org/journal/ajp
-  color: "#00369f"
+# Conference and Journal Venue Information
+"ICDCS":
+  url: https://ieeexplore.ieee.org/xpl/conhome/1000164/all-proceedings
+  color: "#00539B"  # IEEE Blue
 
-"PhysRev":
-  url: https://journals.aps.org/
+"ICDCN":
+  url: https://dl.acm.org/conference/icdcn
+  color: "#0085CA"  # ACM Blue
 
-"Vision":
-  color: "#009f36"
+"NOMS":
+  url: https://noms2024.ieee-noms.org/
+  color: "#00539B"  # IEEE Blue
+
+"MobiQuitous":
+  url: https://mobiquitous.eai-conferences.org/
+  color: "#009f36"  # Green
+
+"JNSM":
+  url: https://www.springer.com/journal/10922
+  color: "#FFD700"  # Springer Gold
