Fix GitHub Actions permissions and Scholar sync script
Critical fixes:
- Added 'permissions: contents: write' to workflow (fixes exit code 128)
- Fixed indentation error in fetch_scholar_publications.py
- Added directory creation to ensure _data/ and _news/ exist
- Improved error handling in proxy setup
- Better exception messages for debugging

This resolves the workflow failure and enables automatic updates.

--- a/.github/workflows/fetch-scholar-data.yml
+++ b/.github/workflows/fetch-scholar-data.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 2 * * *'
   workflow_dispatch: # Allow manual triggering
 
+permissions:
+  contents: write  # Allow workflow to write to repository
+
 jobs:
   fetch-publications:
     runs-on: ubuntu-latest
