--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,6 +89,7 @@ jobs:
           pip3 install --upgrade nbconvert
           export JEKYLL_ENV=production
           bundle exec jekyll build
+          cp .nojekyll _site/.nojekyll
       - name: Purge unused CSS 🧹
         run: |
           npm install -g purgecss
