Fix: Re-enable Google Scholar auto-sync with improved error handling
- Re-enabled daily Scholar sync (2 AM UTC cron)
- Fixed git add path to handle directory creation properly
- Improved Python script with better error handling and sorting
- Added total citation count and publication stats

--- a/.github/workflows/fetch-scholar.yml
+++ b/.github/workflows/fetch-scholar.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
-          git add src/data/publications.json
+          git add src/data/
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
